--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rimraf": "^2.5.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.13.2",
+    "to-string-loader": "^1.1.5",
     "typescript": "^2.1.6",
     "url-loader": "^0.5.8",
     "webpack": "2.2.0",
