--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "postcss": "^5.2.16",
+    "postcss-loader": "^1.3.3",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.4"
   },
@@ -32,11 +34,13 @@
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "bootstrap-loader": "^2.0.0-beta.22",
     "css-loader": "^0.26.4",
+    "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "font-awesome-sass-loader": "^1.0.3",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
+    "imports-loader": "^0.7.1",
     "jasmine-core": "^2.4.1",
     "karma": "^1.2.0",
     "karma-jasmine": "^1.0.2",
@@ -46,6 +50,7 @@
     "node-sass": "^4.5.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "^1.3.3",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.2",
