--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "ng2-owl-carousel": "^0.1.14",
     "postcss": "^5.2.16",
     "rxjs": "5.0.1",
+    "script-loader": "^0.7.0",
     "ts-md5": "^1.2.0",
     "zone.js": "^0.7.4"
   },
