--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
-    "ng2-owl-carousel": "^0.1.14",
+    "owl.carousel": "^2.2.0",
     "postcss": "^5.2.16",
     "rxjs": "5.0.1",
     "script-loader": "^0.7.0",
