--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular2-froala-wysiwyg": "^2.6.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "owl.carousel": "^2.2.0",
@@ -36,6 +37,7 @@
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "bootstrap-loader": "^2.0.0-beta.22",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.4",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
