--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rxjs": "5.4.2",
     "script-loader": "^0.7.0",
     "ts-md5": "^1.2.0",
+    "wowjs": "^1.1.3",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
