--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.5.41",
     "@types/node": "^6.0.45",
+    "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "bootstrap-loader": "^2.0.0-beta.22",
