--- a/.bootstraprc
+++ b/.bootstraprc
@@ -1,3 +1,4 @@
+---
 # Output debugging info
 # loglevel: debug
 
@@ -9,10 +10,10 @@ useFlexbox: true
 
 # Webpack loaders, order matters
 styleLoaders:
-  - style-loader
-  - css-loader
-  - postcss-loader
-  - sass-loader
+  - style
+  - css
+  - postcss
+  - sass
 
 # Extract styles to stand-alone css file
 # Different settings for different environments can be used,
@@ -26,35 +27,26 @@ extractStyles: false
 #   production:
 #     extractStyles: true
 
+
 # Customize Bootstrap variables that get imported before the original Bootstrap variables.
-# Thus original Bootstrap variables can depend on values from here. All the bootstrap
-# variables are configured with !default, and thus, if you define the variable here, then
-# that value is used, rather than the default. However, many bootstrap variables are derived
-# from other bootstrap variables, and thus, you want to set this up before we load the
-# official bootstrap versions.
-# For example, _variables.scss contains:
-# $input-color: $gray !default;
-# This means you can define $input-color before we load _variables.scss
-# preBootstrapCustomizations: ./app/styles/bootstrap/pre-customizations.scss
-
-# This gets loaded after bootstrap/variables is loaded and before bootstrap is loaded.
-# A good example of this is when you want to override a bootstrap variable to be based
-# on the default value of bootstrap. This is pretty specialized case. Thus, you normally
-# just override bootrap variables in preBootstrapCustomizations so that derived
-# variables will use your definition.
+# Thus, derived Bootstrap variables can depend on values from here.
+# See the Bootstrap _variables.scss file for examples of derived Bootstrap variables.
 #
-# For example, in _variables.scss:
-# $input-height: (($font-size-base * $line-height) + ($input-padding-y * 2) + ($border-width * 2)) !default;
-# This means that you could define this yourself in preBootstrapCustomizations. Or you can do
-# this in bootstrapCustomizations to make the input height 10% bigger than the default calculation.
-# Thus you can leverage the default calculations.
-# $input-height: $input-height * 1.10;
-# bootstrapCustomizations: ./app/styles/bootstrap/customizations.scss
+# preBootstrapCustomizations: ./path/to/bootstrap/pre-customizations.scss
 
-# Import your custom styles here. You have access to all the bootstrap variables. If you require
-# your sass files separately, you will not have access to the bootstrap variables, mixins, clases, etc.
-# Usually this endpoint-file contains list of @imports of your application styles.
-# appStyles: ./app/styles/app.scss
+
+# This gets loaded after bootstrap/variables is loaded
+# Thus, you may customize Bootstrap variables
+# based on the values established in the Bootstrap _variables.scss file
+#
+# bootstrapCustomizations: ./path/to/bootstrap/customizations.scss
+
+
+# Import your custom styles here
+# Usually this endpoint-file contains list of @imports of your application styles
+#
+# appStyles: ./path/to/your/app/styles/endpoint.scss
+
 
 ### Bootstrap styles
 styles:
@@ -63,44 +55,42 @@ styles:
   mixins: true
 
   # Reset and dependencies
-  normalize: true
   print: true
 
   # Core CSS
-  reboot: true
-  type: true
-  images: true
-  code: true
-  grid: true
-  tables: true
-  forms: true
   buttons: true
+  code: true
+  forms: true
+  grid: true
+  images: true
+  reboot: true
+  tables: true
+  type: true
 
   # Components
-  transitions: true
-  dropdown: true
+  alert: true
+  badge: true
+  breadcrumb: true
   button-group: true
-  input-group: true
+  card: true
+  close: true
   custom-forms: true
+  dropdown: true
+  input-group: true
+  jumbotron: true
+  list-group: true
+  media: true
   nav: true
   navbar: true
-  card: true
-  breadcrumb: true
   pagination: true
-  badge: true
-  jumbotron: true
-  alert: true
   progress: true
-  media: true
-  list-group: true
-  responsive-embed: true
-  close: true
+  transitions: true
 
   # Components w/ JavaScript
-  modal: true
-  tooltip: true
-  popover: true
   carousel: true
+  modal: true
+  popover: true
+  tooltip: true
 
   # Utility classes
   utilities: true
@@ -117,4 +107,4 @@ scripts:
   scrollspy: true
   tab: true
   tooltip: true
-  util: trueg
+  util: true
