--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.0-beta.18",
-    "bootstrap-loader": "^2.0.0-beta.22",
+    "bootstrap-loader": "^2.1.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.4",
     "exports-loader": "^0.6.4",
